* calculations
  - wave assistant
  - use maximum speed configured in plane setup as limit for calculations
  - use WGS84 earth ellipsoid for distance calculations (#2809)
  - remove setting "Prefer external wind"
  - reduce EKF wind latency
* airspace cross-section
  - sync map & cross-section view zoom setting (#2913)
* infoboxes
  - add "Fin MC0 AltD" infobox (#2824)
* task editor
  - added one-click task reversal (#1730)
  - show name of loaded/saved tasks in dialog title (#1924)
  - support large legs in the FAI triangle renderer (#3413)
  - task calculator moved to "Status" dialog
* map
  - allow "Mark Drop" while panning
  - airspace labels
* user interface
  - allow horizontal speeds in m/s
  - download data files from site configuration
  - remove support for custom status files
  - merge airspace warning buttons "ACK Warn" and "ACK Space" (#1086)
  - show airspace warning at bottom (#1378, #2628, #3275)
  - profile manager
  - password-protected profiles (#851)
  - checklist remembers last opened list (#3110)
  - use configured coordinate format in waypoint editor
  - remove custom font support, replaced with global "text size" setting
  - improved font sizes
  - improved font renderer
  - display rotation for Raspberry Pi and Cubieboard (#3238)
  - use /dev/input/event* on Raspberry Pi and Cubieboard (#3179)
  - support mouse wheel on Raspberry Pi and Cubieboard
  - scale touchscreen coordinates to screen size
  - bigger icons on high-dpi screens (#2795, #3267, #3397, #3540)
  - improved keypad support (#3281)
  - new translation: Simplified Chinese
* tracking
  - new option disables tracking while roaming on the cell network
  - queue SkyLines tracking fixes while data connection is unavailable
  - pass vehicle name to LiveTrack24
* Linux
  - Wayland support
* Android
  - fix IOIO connection on Android 4.x (#2959, #3260)
  - support IOIO-OTG with the Android device in USB host mode
  - support IOIO over Bluetooth
  - support Bluetooth LE